--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <nav>
         <!-- Logotype -->
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo">Web<span class="logo-header">Studio</span></a>
         <!-- Navigation to other pages -->
         <ul>
           <li>
@@ -161,7 +161,7 @@
     <!-- Footer -->
     <footer>
       <!-- Logotype -->
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html" class="logo">Web<span class="logo-footer">Studio</span></a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
