--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Studio</title>
   </head>
 
@@ -12,66 +16,68 @@
     <header>
       <nav>
         <!-- Logotype -->
-        <a href="./index.html" class="logo">Web<span class="logo-header">Studio</span></a>
+        <a href="./index.html" class="logo link"
+          >Web<span class="logo-header">Studio</span></a
+        >
         <!-- Navigation to other pages -->
-        <ul>
+        <ul class="site-nav list">
           <li>
-            <a href="./index.html">Studio</a>
+            <a href="./index.html" class="link current">Studio</a>
           </li>
           <li>
-            <a href="./portfolio.html">Portfolio</a>
+            <a href="./portfolio.html" class="link">Portfolio</a>
           </li>
           <li>
-            <a href="#contacts">Contacts</a>
+            <a href="#contacts" class="link">Contacts</a>
           </li>
         </ul>
       </nav>
-      <ul id="contacts">
+      <ul id="contacts" class="contacts list">
         <!-- Link to email address  -->
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
         </li>
         <!-- Link to phone number -->
         <li>
-          <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
         </li>
       </ul>
     </header>
     <!-- Main page content -->
     <main>
       <!-- Main banner (hero)-->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-btn">Order Service</button>
       </section>
       <!-- Features -->
-      <section>
-        <h2>Features</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title visually-hidden">Features</h2>
+        <ul class="features-list list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="title">Strategy</h3>
+            <p class="text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="title">Punctuality</h3>
+            <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="title">Diligence</h3>
+            <p class="text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="title">Technologies</h3>
+            <p class="text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -79,9 +85,9 @@
         </ul>
       </section>
       <!-- What are we doing -->
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">What are we doing</h2>
+        <ul class="list">
           <li>
             <a href="#"
               ><img
@@ -112,9 +118,9 @@
         </ul>
       </section>
       <!-- Our Team -->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">Our Team</h2>
+        <ul class="team-list list">
           <li>
             <img
               src="./images/foto-mark-guerrero.jpg"
@@ -122,8 +128,8 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="title">Mark Guerrero</h3>
+            <p class="text">Product Designer</p>
           </li>
           <li>
             <img
@@ -132,8 +138,8 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="title">Tom Ford</h3>
+            <p class="text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -142,8 +148,8 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="title">Camila Garcia</h3>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img
@@ -152,17 +158,19 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="title">Daniel Wilson</h3>
+            <p class="text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- Footer -->
-    <footer>
+    <footer class="footer">
       <!-- Logotype -->
-      <a href="./index.html" class="logo">Web<span class="logo-footer">Studio</span></a>
-      <p>
+      <a href="./index.html" class="logo link"
+        >Web<span class="logo-footer">Studio</span></a
+      >
+      <p class="text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
