--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Portfolio</title>
   </head>
 
@@ -12,159 +16,163 @@
     <header>
       <nav>
         <!-- Logotype -->
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo link"
+          >Web<span class="logo-header">Studio</span></a
+        >
         <!-- Navigation to other pages -->
-        <ul>
+        <ul class="site-nav list">
           <li>
-            <a href="./index.html">Studio</a>
+            <a href="./index.html" class="link">Studio</a>
           </li>
           <li>
-            <a href="./portfolio.html">Portfolio</a>
+            <a href="./portfolio.html" class="link current">Portfolio</a>
           </li>
           <li>
-            <a href="#contacts">Contacts</a>
+            <a href="#contacts" class="link">Contacts</a>
           </li>
         </ul>
       </nav>
-      <ul id="contacts">
+      <ul id="contacts" class="contacts list">
         <!-- Link to email address  -->
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
         </li>
         <!-- Link to phone number -->
         <li>
-          <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
         </li>
       </ul>
     </header>
     <!-- Main page content -->
     <main>
-      <section>
-        <h1></h1>
-        <ul>
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
+      <section class="section">
+        <h1 class="visually-hidden">Portfolio</h1>
+        <ul class="site-filter list">
+          <li><button type="button" class="button">All</button></li>
+          <li><button type="button" class="button">Web Site</button></li>
+          <li><button type="button" class="button">App</button></li>
+          <li><button type="button" class="button">Design</button></li>
+          <li><button type="button" class="button">Marketing</button></li>
         </ul>
-        <ul>
+        <ul class="portfolio-list list">
           <li>
-            <a href="#">
+            <a href="#" class="link">
               <img
                 src="./images/banking-app-interface-concept.jpg"
                 alt="seven tabs of the bank's mobile application"
                 width="360"
                 height="300"
               />
-              <h2>Banking App Interface Concept</h2>
-              <p>App</p>
+              <h2 class="title">Banking App Interface Concept</h2>
+              <p class="text">App</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="link">
               <img
                 src="./images/cashless-payment.jpg"
                 alt="blue background / seven tabs of the bank's mobile application"
                 width="360"
                 height="300"
               />
-              <h2>Cashless Payment</h2>
-              <p>Marketing</p>
+              <h2 class="title">Cashless Payment</h2>
+              <p class="text">Marketing</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="link">
               <img
                 src="./images/meditaion-app.jpg"
                 alt="Laptop and mobile phone with the start page of the applicatoin"
                 width="360"
                 height="300"
               />
-              <h2>Meditaion App</h2>
-              <p>App</p>
+              <h2 class="title">Meditaion App</h2>
+              <p class="text">App</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="link">
               <img
                 src="./images/taxi-service.jpg"
                 alt="Wheel and instrument panel in the car"
                 width="360"
                 height="300"
               />
-              <h2>Taxi Service</h2>
-              <p>Marketing</p>
+              <h2 class="title">Taxi Service</h2>
+              <p class="text">Marketing</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="link">
               <img
                 src="./images/screen-illustrations.jpg"
                 alt="Five mobile screensavers"
                 width="360"
                 height="300"
               />
-              <h2>Screen Illustrations</h2>
-              <p>Design</p>
+              <h2 class="title">Screen Illustrations</h2>
+              <p class="text">Design</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="link">
               <img
                 src="./images/online-courses.jpg"
                 alt="Girl with phone and headphones in her hand"
                 width="360"
                 height="300"
               />
-              <h2>Online Courses</h2>
-              <p>Marketing</p>
+              <h2 class="title">Online Courses</h2>
+              <p class="text">Marketing</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="link">
               <img
                 src="./images/instagram-stories-concept.jpg"
                 alt="Post pages for instagram"
                 width="360"
                 height="300"
               />
-              <h2>Instagram Stories Concept</h2>
-              <p>Design</p>
+              <h2 class="title">Instagram Stories Concept</h2>
+              <p class="text">Design</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="link">
               <img
                 src="./images/organic-food.jpg"
                 alt="Bag with vegetables"
                 width="360"
                 height="300"
               />
-              <h2>Organic Food</h2>
-              <p>Web Site</p>
+              <h2 class="title">Organic Food</h2>
+              <p class="text">Web Site</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="link">
               <img
                 src="./images/fresh-coffee.jpg"
                 alt="Cup of coffee"
                 width="360"
                 height="300"
               />
-              <h2>Fresh Coffee</h2>
-              <p>Web Site</p>
+              <h2 class="title">Fresh Coffee</h2>
+              <p class="text">Web Site</p>
             </a>
           </li>
         </ul>
       </section>
     </main>
     <!-- Footer -->
-    <footer>
+    <footer class="footer">
       <!-- Logotype -->
-      <a href="./index.html">WebStudio</a>
-      <p>
+      <a href="./index.html" class="logo link"
+        >Web<span class="logo-footer">Studio</span></a
+      >
+      <p class="text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
