--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
         </ul>
       </section>
       <!-- Our Team -->
-      <section class="section">
+      <section class="section team-section">
         <h2 class="section-title">Our Team</h2>
         <ul class="team-list list">
-          <li>
+          <li class="team-list-card">
             <img
               src="./images/foto-mark-guerrero.jpg"
               alt="foto Mark Guerrero"
@@ -131,7 +131,7 @@
             <h3 class="title">Mark Guerrero</h3>
             <p class="text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-list-card">
             <img
               src="./images/foto-tom-ford.jpg"
               alt="foto Tom Ford"
@@ -141,7 +141,7 @@
             <h3 class="title">Tom Ford</h3>
             <p class="text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-list-card">
             <img
               src="./images/foto-camila-garcia.jpg"
               alt="foto Camila Garcia"
@@ -151,7 +151,7 @@
             <h3 class="title">Camila Garcia</h3>
             <p class="text">Marketing</p>
           </li>
-          <li>
+          <li class="team-list-card">
             <img
               src="./images/foto-daniel-wilson.jpg"
               alt="foto Daniel Wilson"
