--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Studio</title>
   </head>
@@ -28,14 +31,16 @@
             <a href="./portfolio.html" class="link">Portfolio</a>
           </li>
           <li>
-            <a href="#contacts" class="link">Contacts</a>
+            <a href="#" class="link">Contacts</a>
           </li>
         </ul>
       </nav>
-      <ul id="contacts" class="contacts list">
+      <ul class="contacts list">
         <!-- Link to email address  -->
         <li>
-          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link"
+            >info@devstudio.com</a
+          >
         </li>
         <!-- Link to phone number -->
         <li>
@@ -89,31 +94,28 @@
         <h2 class="section-title">What are we doing</h2>
         <ul class="list">
           <li>
-            <a href="#"
-              ><img
-                src="./images/img1.jpg"
-                alt="the site is displayed on the monitor"
-                width="360"
-                height="300"
-            /></a>
+            <img
+              src="./images/img1.jpg"
+              alt="the site is displayed on the monitor"
+              width="360"
+              height="300"
+            />
           </li>
           <li>
-            <a href="#"
-              ><img
-                src="./images/img2.jpg"
-                alt="image layout for mobile"
-                width="360"
-                height="300"
-            /></a>
+            <img
+              src="./images/img2.jpg"
+              alt="image layout for mobile"
+              width="360"
+              height="300"
+            />
           </li>
           <li>
-            <a href="#"
-              ><img
-                src="./images/img3.jpg"
-                alt="the site is displayed on a mobile phone"
-                width="360"
-                height="300"
-            /></a>
+            <img
+              src="./images/img3.jpg"
+              alt="the site is displayed on a mobile phone"
+              width="360"
+              height="300"
+            />
           </li>
         </ul>
       </section>
