--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
             <a href="#" class="link">
               <img
                 src="./images/cashless-payment.jpg"
-                alt="blue background / seven tabs of the bank's mobile application"
+                alt="mobile app with qr code on screen"
                 width="360"
                 height="300"
               />
